bk_ida/gccida/g0/int_loc_descriptor
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_loc_descriptor/src/dwarf2out.c:8148:25: error: use of undeclared identifier 'dwarf_location_atom'
return new_loc_descr( ( dwarf_location_atom)( i + 48), i, 0LL); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/int_loc_descriptor/src/obj/dwarf2out.o] Error 1
